:boom: refactor: update endpoint
with generated classes
